src/component/tooltip/tooltip.use.scss
@import "../../style/colors";

div.tooltip {
  background-color: $color-cion-primary;
  border-radius: 0.4rem;
  color: $color-cion-background-primary;
  display: inline-block;
  height: 3rem;
  position: relative;
  text-align: center;
  width: 3rem;

  div.tooltip-text {
    background-color: $black;
    border-radius: 1rem;
    color: $white;
    opacity: 0;
    padding: 1rem;
    position: absolute;
    text-align: left;
    transition: opacity 0.2s;
    visibility: hidden;
    width: 40rem;
    z-index: 1;
  }

  div.tooltip-left {
    bottom: auto;
    right: 128%;
    top: -5px;
  }
}

div.tooltip:hover div.tooltip-text {
  opacity: 1;
  visibility: visible;
}

